--- a/ProJquery/ProJquery/Views/Home/Index.cshtml
+++ b/ProJquery/ProJquery/Views/Home/Index.cshtml
@@ -6,6 +6,8 @@
 
 <html>
 <head>
+    <script type="text/javascript" src="~/Scripts/jquery-2.1.0.js"></script>
+    <link rel="stylesheet" href="~/Styles/Style.css" type="text/css" />
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
 </head>
