--- a/ProJquery/ProJquery/Views/Home/Index.cshtml
+++ b/ProJquery/ProJquery/Views/Home/Index.cshtml
@@ -66,5 +66,20 @@
 
         </form>
     </div>
+    <script type="text/javascript">
+        var elements = document.getElementsByTagName("img");
+        for (var i = 0; i < elements.length; i++) {
+            elements[i].onmouseover = handleMouseOver;
+            elements[i].onmouseout = handleMouseOut;
+        }
+
+        function handleMouseOver(e) {
+            e.target.style.opacity = 0.5;
+        }
+
+        function handleMouseOut(e) {
+            e.target.style.opacity = 1;
+        }
+    </script>
 </body>
 </html>
