--- a/ProJquery/ProJquery/Views/Home/Css.cshtml
+++ b/ProJquery/ProJquery/Views/Home/Css.cshtml
@@ -9,9 +9,13 @@
     <meta name="viewport" content="width=device-width" />
     <title>Css</title>
     <style type="text/css">
-        h2 {
-            color: white;
+        :nth-of-type(2) {
             background-color: grey;
+            color: white;
+        }
+
+        p:first-letter {
+            font-size: 40px;
         }
     </style>
 </head>
