--- a/ProJquery/ProJquery/Views/Home/Css.cshtml
+++ b/ProJquery/ProJquery/Views/Home/Css.cshtml
@@ -8,16 +8,10 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Css</title>
-    <style type="text/css">
-        :nth-of-type(2) {
-            background-color: grey;
-            color: white;
-        }
+    <script type="text/javascript" src="~/Scripts/jquery-2.1.0.js"></script>
+    <script type="text/javascript">
 
-        p:first-letter {
-            font-size: 40px;
-        }
-    </style>
+    </script>
 </head>
 <body>
     <div>
