--- a/ProJquery/ProJquery/Views/Home/Index.cshtml
+++ b/ProJquery/ProJquery/Views/Home/Index.cshtml
@@ -9,12 +9,7 @@
     <script type="text/javascript" src="~/Scripts/jquery-2.1.0.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
-            var jq1 = $("img:odd");
-            console.log("No context: " + jq1.context.tagName);
-            var jq2 = $("img:odd", $(".drow"));
-            console.log("Multiple context elements: " + jq2.context.tagName);
-            var jq3 = $("img:odd", document.getElementById("oblock"));
-            console.log("Single context element: " + jq3.context.tagName);
+            console.log($(".dtable").scrollLeft()+"  "+$(".dtable").scrollTop());
         });
     </script>
     <link rel="stylesheet" href="~/Styles/Style.css" type="text/css" />
@@ -71,20 +66,5 @@
 
         </form>
     </div>
-    <script type="text/javascript">
-        var elements = document.getElementsByTagName("img");
-        for (var i = 0; i < elements.length; i++) {
-            elements[i].onmouseover = handleMouseOver;
-            elements[i].onmouseout = handleMouseOut;
-        }
-
-        function handleMouseOver(e) {
-            e.target.style.opacity = 0.5;
-        }
-
-        function handleMouseOut(e) {
-            e.target.style.opacity = 1;
-        }
-    </script>
 </body>
 </html>
