--- a/ProJquery/ProJquery/Views/Home/Index.cshtml
+++ b/ProJquery/ProJquery/Views/Home/Index.cshtml
@@ -9,7 +9,10 @@
     <script type="text/javascript" src="~/Scripts/jquery-2.1.0.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
-            console.log($(".dtable").scrollLeft()+"  "+$(".dtable").scrollTop());
+            $("[type='button']").click(function (eventHandler) {
+                $("img").hide();
+                
+            });
         });
     </script>
     <link rel="stylesheet" href="~/Styles/Style.css" type="text/css" />
@@ -61,7 +64,7 @@
             </div>
 
             <div id="buttonDiv">
-                <button type="submit">Place Order</button>
+                <button type="button">Place Order</button>
             </div>
 
         </form>
