--- a/ProJquery/ProJquery/Views/Home/Index.cshtml
+++ b/ProJquery/ProJquery/Views/Home/Index.cshtml
@@ -9,10 +9,11 @@
     <script type="text/javascript" src="~/Scripts/jquery-2.1.0.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
-            $("[type='button']").click(function (eventHandler) {
-                $("img").hide();
-                
-            });
+            /*
+            snbao:String Number Boolean Array Object
+            putongliufudongjueduidingwei position:static relative absolute fixed
+            fwghso:
+            */
         });
     </script>
     <link rel="stylesheet" href="~/Styles/Style.css" type="text/css" />
