--- a/ProMvc/SportsStore.WebUI/Views/Shared/_Layout.cshtml
+++ b/ProMvc/SportsStore.WebUI/Views/Shared/_Layout.cshtml
@@ -5,12 +5,19 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    @RenderBody()
 
-    @Scripts.Render("~/bundles/jquery")
-    @RenderSection("scripts", required: false)
+    <div id="header">
+        <div class="title">SPORTS STORE</div>
+    </div>
+
+    <div id="categories">
+        We will put something useful here later
+    </div>
+
+    <div id="content">
+        @RenderBody()
+    </div>
 </body>
 </html>
