--- a/ProMvc/SportsStore.WebUI/Views/Shared/_Layout.cshtml
+++ b/ProMvc/SportsStore.WebUI/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     </div>
 
     <div id="categories">
-        We will put something useful here later
+        @{ Html.RenderAction("Menu", "Nav"); }
     </div>
 
     <div id="content">
