--- a/ProMvc/SportsStore.WebUI/Views/Cart/Index.cshtml
+++ b/ProMvc/SportsStore.WebUI/Views/Cart/Index.cshtml
@@ -43,4 +43,5 @@
 
 <p align="center" class="actionButtons">
     <a href="@Model.ReturnUrl">Continue shopping</a>
+    @Html.ActionLink("Checkout Now", "Checkout")
 </p>
