--- a/ProMvc/SportsStore.WebUI/Views/Home/Index.cshtml
+++ b/ProMvc/SportsStore.WebUI/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div>
-        @Url.RouteUrl(new{controller = "Index", action = "Home"})
+        @Html.RouteLink("", "", "","")
     </div>
 </body>
 </html>
