--- a/ProMvc/SportsStore.WebUI/Views/Home/Index.cshtml
+++ b/ProMvc/SportsStore.WebUI/Views/Home/Index.cshtml
@@ -1,17 +1,28 @@
-﻿@{
+﻿@using SportsStore.WebUI.Utils
+@model string
+
+@{
     Layout = null;
 }
 
 <!DOCTYPE html>
 
 <html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body>
-    <div>
-        Hello world
-    </div>
-</body>
+    <head>
+        <meta name="viewport" content="width=device-width" />
+        <title>Index</title>
+    </head>
+    <body>
+        <div>
+            Here are the fruits: @Html.ListArrayItems((string[]) ViewBag.Fruits)
+        </div>
+        <div>
+            Here are the cities: @Html.ListArrayItems((string[]) ViewBag.Cities)
+        </div>
+    
+        <div>
+            Here is the message:
+            <p>@Model</p>
+        </div>
+    </body>
 </html>
