--- a/ProJquery/ProJquery/Views/Home/Standard.cshtml
+++ b/ProJquery/ProJquery/Views/Home/Standard.cshtml
@@ -5,21 +5,26 @@
 <!DOCTYPE html>
 
 <html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Standard</title>
-    <script type="text/javascript" src="~/Scripts/jquery-2.1.0.js"></script>
-    <script type="text/javascript">
-        $(document).ready(
-            function () {
-                console.log("Hello world");
-            }
-        );
-    </script>
-</head>
-<body>
-    <div>
-        Hello world.
-    </div>
-</body>
+    <head>
+        <meta name="viewport" content="width=device-width" />
+        <title>Standard</title>
+        
+        <script type="text/javascript" src="~/Scripts/jquery-2.1.0.js"></script>
+        <script type="text/javascript">
+            $(document).ready(
+                function() {
+                    console.log("Hello world");
+                }
+            );
+        </script>
+        <link rel="stylesheet" type="text/css" href="~/Styles/style.css"/>
+        <style type="text/css">
+            
+        </style>
+    </head>
+    <body>
+        <div>
+            Hello world.
+        </div>
+    </body>
 </html>
