--- a/ProJquery/ProJquery/Views/Home/Index.cshtml
+++ b/ProJquery/ProJquery/Views/Home/Index.cshtml
@@ -5,70 +5,97 @@
 <!DOCTYPE html>
 
 <html>
-<head>
-    <script type="text/javascript" src="~/Scripts/jquery-2.1.0.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function () {
-            /*
-            snbao:String Number Boolean Array Object
-            putongliufudongjueduidingwei position:static relative absolute fixed
-            fwghso:
-            */
-        });
-    </script>
-    <link rel="stylesheet" href="~/Styles/Style.css" type="text/css" />
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body>
-    <div>
-        <h1>Jacqui's Flower Shop</h1>
-        <form method="post">
-            <div id="oblock">
-                <div class="dtable">
-                    <div id="row1" class="drow">
-                        <div class="dcell">
-                            <img src="~/Images/aster.png" />
-                            <label for="aster">Aster:</label>
-                            <input name="aster" value="0" required />
-                        </div>
-                        <div class="dcell">
-                            <img src="~/Images/daffodil.png" />
-                            <label for="daffodil">Daffodil:</label>
-                            <input name="daffodil" value="0" required />
-                        </div>
-                        <div class="dcell">
-                            <img src="~/Images/rose.png" />
-                            <label for="rose">Rose:</label>
-                            <input name="rose" value="0" required />
-                        </div>
-                    </div>
+    <head>
+        <script type="text/javascript" src="../../Scripts/jquery-2.1.0.js"></script>
+        <script type="text/javascript" src="../../Scripts/jquery-2.1.0.intellisense.js"></script>
+        <script type="text/javascript" src="../../Scripts/jquery.validate.js"></script>
+        <script src="../../Scripts/handlebars-v1.3.0.js" type="text/javascript"></script>
+        <script src="../../Scripts/handlebars-jquery.js" type="text/javascript"></script>
+        <script type="text/javascript">
+            $(document).ready(function() {
+                $("form").validate({
+                    highlight: function(element, errorClass) {
+                        $(element).add($(element).parent()).addClass("invalidElem");
+                    },
+                    unhighlight: function(element, errorClass) {
+                        $(element).add($(element).parent()).removeClass("invalidElem");
+                    },
+                    errorElement: "div",
+                    errorClass: "errorMsg"
+                });
 
-                    <div id="row2" class="drow">
-                        <div class="dcell">
-                            <img src="~/Images/peony.png" />
-                            <label for="peony">Peony:</label>
-                            <input name="peony" value="0" required />
+                $.validator.addClassRules({
+                    flowerValidation: {
+                        required:true,
+                        min: 0,
+                        digits: true,
+                        max:100
+                    }
+                });
+
+                $("input").addClass("flowerValidation").change(function(e) {
+                    $("form").validate().element($(e.target));
+                });
+            });
+        </script>
+        <link rel="stylesheet" href="~/Styles/Style.css" type="text/css" />
+        <style type="text/css">
+            .errorMsg { color: red; }
+
+            .invalidElem { border: medium solid red; }
+        </style>
+        <meta name="viewport" content="width=device-width" />
+        <title>Index</title>
+    </head>
+    <body>
+        <div>
+            <h1>Jacqui's Flower Shop</h1>
+            <form method="post">
+                <div id="oblock">
+                    <div class="dtable">
+                        <div id="row1" class="drow">
+                            <div class="dcell">
+                                <img src="~/Images/aster.png" />
+                                <label for="aster">Aster:</label>
+                                <input name="aster" value="0" required />
+                            </div>
+                            <div class="dcell">
+                                <img src="~/Images/daffodil.png" />
+                                <label for="daffodil">Daffodil:</label>
+                                <input name="daffodil" value="0" required />
+                            </div>
+                            <div class="dcell">
+                                <img src="~/Images/rose.png" />
+                                <label for="rose">Rose:</label>
+                                <input name="rose" value="0" required />
+                            </div>
                         </div>
-                        <div class="dcell">
-                            <img src="~/Images/primula.png" />
-                            <label for="primula">Primula:</label>
-                            <input name="primula" value="0" required />
-                        </div>
-                        <div class="dcell">
-                            <img src="~/Images/snowdrop.png" />
-                            <label for="snowdrop">Snowdrop:</label>
-                            <input name="snowdrop" value="0" required />
+
+                        <div id="row2" class="drow">
+                            <div class="dcell">
+                                <img src="~/Images/peony.png" />
+                                <label for="peony">Peony:</label>
+                                <input name="peony" value="0" required />
+                            </div>
+                            <div class="dcell">
+                                <img src="~/Images/primula.png" />
+                                <label for="primula">Primula:</label>
+                                <input name="primula" value="0" required />
+                            </div>
+                            <div class="dcell">
+                                <img src="~/Images/snowdrop.png" />
+                                <label for="snowdrop">Snowdrop:</label>
+                                <input name="snowdrop" value="0" required />
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <div id="buttonDiv">
-                <button type="button">Place Order</button>
-            </div>
+                <div id="buttonDiv">
+                    <button type="submit">Place Order</button>
+                </div>
 
-        </form>
-    </div>
-</body>
+            </form>
+        </div>
+    </body>
 </html>
