--- a/WpfLearn/WpfLearn/MainWindow.xaml
+++ b/WpfLearn/WpfLearn/MainWindow.xaml
@@ -2,11 +2,21 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
-    <StackPanel>
-        <Label>A button stack</Label>
-        <Button>Button1</Button>
-        <Button>Button2</Button>
-        <Button>Button3</Button>
-        <Button>Button4</Button>
-    </StackPanel>
+    <Grid ShowGridLines="True">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="Auto"></ColumnDefinition>
+            <ColumnDefinition Width="Auto"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <TextBox Margin="10" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3">
+            This is a test.</TextBox>
+        <Button Margin="10,10,2,10" Padding="3"
+Grid.Row="1" Grid.Column="1">OK</Button>
+        <Button Margin="2,10,10,10" Padding="3"
+Grid.Row="1" Grid.Column="2">Cancel</Button>
+    </Grid>
 </Window>
