--- a/WpfLearn/WpfLearn/App.xaml
+++ b/WpfLearn/WpfLearn/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="WpfLearn.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="UI\InkCanvas.xaml">
+             StartupUri="Events\DragDrop.xaml">
     <Application.Resources>
          
     </Application.Resources>
