--- a/WpfLearn/WpfLearn/App.xaml
+++ b/WpfLearn/WpfLearn/App.xaml
@@ -1,7 +1,12 @@
 ﻿<Application x:Class="WpfLearn.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Controls/ComboBox.xaml">
+             StartupUri="MainWindow.xaml"
+             Startup="App_OnStartup"
+             Exit="App_OnExit"
+             Activated="App_OnActivated"
+             Deactivated="App_OnDeactivated"
+             DispatcherUnhandledException="App_OnDispatcherUnhandledException">
     <Application.Resources>
          
     </Application.Resources>
