--- a/WpfLearn/WpfLearn/MainWindow.xaml
+++ b/WpfLearn/WpfLearn/MainWindow.xaml
@@ -2,5 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="550" Width="525">
-    
+    <StackPanel>
+        <Slider Name="SliderFont" Margin="3" Maximum="49" Minimum="1" Value="10" TickFrequency="1" TickPlacement="TopLeft" ></Slider>
+        <TextBlock Margin="10" Text="Simple Text" Name="TbText" FontSize="{Binding ElementName=SliderFont,Path=Value}"></TextBlock>
+    </StackPanel>
 </Window>
