--- a/WpfLearn/WpfLearn/App.xaml
+++ b/WpfLearn/WpfLearn/App.xaml
@@ -1,13 +1,18 @@
 ﻿<Application x:Class="WpfLearn.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Bindings/ObjectBinding.xaml"
+             StartupUri="Commands/CommandTest.xaml"
              Startup="App_OnStartup"
              Exit="App_OnExit"
              Activated="App_OnActivated"
              Deactivated="App_OnDeactivated"
-             DispatcherUnhandledException="App_OnDispatcherUnhandledException">
+             DispatcherUnhandledException="App_OnDispatcherUnhandledException"
+             SessionEnding="App_OnSessionEnding">
     <Application.Resources>
-         
+        <Style x:Key="BigFontButtonStyle">
+            <Setter Property="Control.FontFamily" Value="Times New Roman" />
+            <Setter Property="Control.FontSize" Value="18" />
+            <Setter Property="Control.FontWeight" Value="Bold" />
+        </Style>
     </Application.Resources>
 </Application>
