--- a/WpfLearn/WpfLearn/MainWindow.xaml
+++ b/WpfLearn/WpfLearn/MainWindow.xaml
@@ -1,7 +1,12 @@
 ﻿<Window x:Class="WpfLearn.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="550" Width="525">
+        Title="MainWindow" Height="550" Width="525"
+        >
+    <Window.Resources>
+        <ImageBrush x:Key="TileBrush" x:Shared="False" TileMode="Tile"></ImageBrush>
+    </Window.Resources>
+    
     <StackPanel>
         <Slider Name="SliderFont" Margin="3" Maximum="49" Minimum="1" Value="10" TickFrequency="1" TickPlacement="TopLeft" ></Slider>
         <TextBlock Margin="10" Text="Simple Text" Name="TbText" FontSize="{Binding ElementName=SliderFont,Path=Value}"></TextBlock>
