--- a/WpfLearn/WpfLearn/App.xaml
+++ b/WpfLearn/WpfLearn/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="WpfLearn.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Commands/CommandTest.xaml"
+             StartupUri="Controls/Transform/RotateTransform.xaml"
              Startup="App_OnStartup"
              Exit="App_OnExit"
              Activated="App_OnActivated"
@@ -9,10 +9,44 @@
              DispatcherUnhandledException="App_OnDispatcherUnhandledException"
              SessionEnding="App_OnSessionEnding">
     <Application.Resources>
-        <Style x:Key="BigFontButtonStyle">
-            <Setter Property="Control.FontFamily" Value="Times New Roman" />
-            <Setter Property="Control.FontSize" Value="18" />
-            <Setter Property="Control.FontWeight" Value="Bold" />
-        </Style>
+        <!--<Style x:Key="BigFontButtonStyle" TargetType="Button">
+            <Style.Setters>
+                <Setter Property="Control.FontFamily" Value="Times New Roman" />
+                <Setter Property="Control.FontSize" Value="18" />
+                <Setter Property="Control.FontWeight" Value="Bold" />
+                <EventSetter Event="TextBlock.MouseEnter" Handler="TextBolck_OnMouseEnter"></EventSetter>
+                <EventSetter Event="TextBlock.MouseLeave" Handler="TextBolck_OnMouseLeave"></EventSetter>
+            </Style.Setters>
+            <Style.Triggers>
+                <Trigger Property="Control.IsFocused" Value="True">
+                    <Setter Property="Control.Foreground" Value="DarkRed"></Setter>
+                </Trigger>
+                <Trigger Property="Control.IsMouseOver" Value="True">
+                    <Setter Property="Control.Foreground" Value="LightYellow" />
+                    <Setter Property="Control.FontWeight" Value="Bold" />
+                </Trigger>
+                <Trigger Property="Button.IsPressed" Value="True">
+                    <Setter Property="Control.Foreground" Value="Red" />
+                </Trigger>
+                <MultiTrigger>
+                    <MultiTrigger.Conditions>
+                        <Condition Property="Control.IsFocused" Value="True" />
+                        <Condition Property="Control.IsMouseOver" Value="True" />
+                    </MultiTrigger.Conditions>
+                    <MultiTrigger.Setters>
+                        <Setter Property="Control.Foreground" Value="DarkRed" />
+                    </MultiTrigger.Setters>
+                </MultiTrigger>
+                <EventTrigger>
+                    <EventTrigger.Actions>
+                        <BeginStoryboard>
+                            <Storyboard>
+                                <DoubleAnimation Duration="0:0:0.2" Storyboard.TargetProperty="FontSize" To="22"></DoubleAnimation>
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </EventTrigger.Actions>
+                </EventTrigger>
+            </Style.Triggers>
+        </Style>-->
     </Application.Resources>
 </Application>
