--- a/WpfLearn/WpfLearn/Controls/ListBox.xaml
+++ b/WpfLearn/WpfLearn/Controls/ListBox.xaml
@@ -3,9 +3,26 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="ListBox" Height="300" Width="300">
     <Grid>
-        <ListBox>
+        <ListBox AlternationCount="2" >
+            <ListBox.ItemContainerStyle>
+                <Style>
+                    <Setter Property="ListBoxItem.Background" Value="LightSteelBlue"></Setter>
+                    <Setter Property="ListBoxItem.Margin" Value="5"></Setter>
+                    <Setter Property="ListBoxItem.Padding" Value="5"></Setter>
+                    <Style.Triggers>
+                        <Trigger Property="ItemsControl.AlternationIndex" Value="1">
+                            <Setter Property="ListBoxItem.Background" Value="LightBlue" />
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </ListBox.ItemContainerStyle>
             <ListBox.Items>
-                <ListBoxItem>Red</ListBoxItem>
+                <ListBoxItem>
+                    <StackPanel Orientation="Horizontal">
+                        <CheckBox VerticalAlignment="Center"></CheckBox>
+                        <Label VerticalAlignment="Center">red</Label>
+                    </StackPanel>
+                </ListBoxItem>
                 <ListBoxItem>Black</ListBoxItem>
                 <ListBoxItem>Green</ListBoxItem>
                 <ListBoxItem><TextBlock>Helo</TextBlock></ListBoxItem>
