--- a/WpfLearn/WpfLearn/Controls/DataGrid.xaml
+++ b/WpfLearn/WpfLearn/Controls/DataGrid.xaml
@@ -1,8 +1,49 @@
 ﻿<Window x:Class="WpfLearn.Controls.DataGrid"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:collections="clr-namespace:System.Collections;assembly=mscorlib"
+        xmlns:system="clr-namespace:System;assembly=mscorlib"
+        xmlns:deletable="clr-namespace:WpfLearn.Deletable"
         Title="DataGrid" Height="300" Width="300" Loaded="DataGrid_OnLoaded">
+    <Window.Resources>
+        <deletable:ImagePathConverter x:Key="ImagePathConverter"></deletable:ImagePathConverter>
+    </Window.Resources>
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+        </Grid.RowDefinitions>
         <DataGrid Name="GridProducts" AutoGenerateColumns="True" RowHeaderWidth="16" AlternatingRowBackground="Aquamarine"></DataGrid>
+        
+        
+        <DataGrid Name="GridProducts2" Grid.Row="1" AutoGenerateColumns="False">
+            <DataGrid.Columns>
+                <DataGridTextColumn  Header="Product" Width="175" Binding="{Binding Path=ModelName}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Price" Binding="{Binding Path=UnitCost}"></DataGridTextColumn>
+                <DataGridComboBoxColumn Header="Category"
+SelectedItemBinding="{Binding Path=CategoryName}">
+                    <DataGridComboBoxColumn.ItemsSource>
+                        <collections:ArrayList>
+                            <system:String>General</system:String>
+                            <system:String>Communications</system:String>
+                            <system:String>Deception</system:String>
+                            <system:String>Munitions</system:String>
+                            <system:String>Protection</system:String>
+                            <system:String>Tools</system:String>
+                            <system:String>Travel</system:String>
+                        </collections:ArrayList>
+                    </DataGridComboBoxColumn.ItemsSource>
+                </DataGridComboBoxColumn>
+                <DataGridTemplateColumn>
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Image Stretch="None" Source=
+"{Binding Path=ProductImagePath, Converter={StaticResource ImagePathConverter}}">
+                            </Image>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </Window>
