--- a/WpfLearn/WpfLearn/Controls/Date.xaml
+++ b/WpfLearn/WpfLearn/Controls/Date.xaml
@@ -1,11 +1,18 @@
 ﻿<Window x:Class="WpfLearn.Controls.Date"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         Title="Date" Height="300" Width="300">
     <Grid>
         <StackPanel>
-            <DatePicker></DatePicker>
+            <DatePicker ></DatePicker>
             <Calendar></Calendar>
+            
+            <!--Extended WPF Toolkit-->
+            <xctk:TimePicker></xctk:TimePicker>
+            <StackPanel Visibility="Collapsed">
+                <Calendar></Calendar>
+            </StackPanel>
         </StackPanel>
     </Grid>
 </Window>
